# shellexpand

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUALITY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: PROJECT_BRIEF.md
src/shellexpand/: __init__.py  _braces.py  _errors.py  _expand.py  _names.py  _parameter.py  _tilde.py
tests/: conftest.py  test_api_surface.py  test_braces.py  test_escape.py  test_expand.py  test_integration.py  test_parameter.py  test_tilde.py
