[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "shellexpand"
version = "0.1.0"
description = "Zero-dep POSIX-style shell text expansion — tilde, brace, and parameter (${VAR}, ${VAR:-default}) expansion with quote-aware tokenization."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nripanka Das" }]
requires-python = ">=3.10"
keywords = ["shell", "expand", "tilde", "brace-expansion", "parameter-expansion", "posix", "zero-dependencies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/nripankadas07/shellexpand"
Source   = "https://github.com/nripankadas07/shellexpand"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shellexpand = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["shellexpand"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
